v2.1.7/_sources/api_reference/posydon.binary_evol.DT.rst.txt
posydon.binary\_evol.DT
=======================

.. automodule:: posydon.binary_evol.DT
   :members:
   :show-inheritance:
   :undoc-members:


.. toctree::
   :maxdepth: 2
   :titlesonly:

   posydon.binary_evol.DT.gravitational_radiation
   posydon.binary_evol.DT.magnetic_braking
   posydon.binary_evol.DT.tides
   posydon.binary_evol.DT.winds



posydon.binary\_evol.DT.double\_CO
----------------------------------

.. automodule:: posydon.binary_evol.DT.double_CO
   :members:
   :show-inheritance:
   :undoc-members:

posydon.binary\_evol.DT.key\_library
------------------------------------

.. automodule:: posydon.binary_evol.DT.key_library
   :members:
   :show-inheritance:
   :undoc-members:

posydon.binary\_evol.DT.step\_detached
--------------------------------------

.. automodule:: posydon.binary_evol.DT.step_detached
   :members:
   :show-inheritance:
   :undoc-members:

posydon.binary\_evol.DT.step\_disrupted
---------------------------------------

.. automodule:: posydon.binary_evol.DT.step_disrupted
   :members:
   :show-inheritance:
   :undoc-members:

posydon.binary\_evol.DT.step\_initially\_single
-----------------------------------------------

.. automodule:: posydon.binary_evol.DT.step_initially_single
   :members:
   :show-inheritance:
   :undoc-members:

posydon.binary\_evol.DT.step\_isolated
--------------------------------------

.. automodule:: posydon.binary_evol.DT.step_isolated
   :members:
   :show-inheritance:
   :undoc-members:

posydon.binary\_evol.DT.step\_merged
------------------------------------

.. automodule:: posydon.binary_evol.DT.step_merged
   :members:
   :show-inheritance:
   :undoc-members:

posydon.binary\_evol.DT.track\_match
------------------------------------

.. automodule:: posydon.binary_evol.DT.track_match
   :members:
   :show-inheritance:
   :undoc-members:
